# Rag_MCP

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  a.md  check_qdrant.py  docker-compose.yml  ingest_docs.py  main.py  pyproject.toml  test_mcp_client.py
.aws/: task-definition.json
.github/: SETUP_SECRETS.md
.github/workflows/: deploy.yml
doc/: file1.md  file2.md  file3.md  file4.md  file5.md  file6.md
src/: dependencies.py
src/core/: config.py
src/domain/entities/: document.py
src/domain/ports/: chunking_repository.py  vector_repository.py
src/infrastructure/: chunking_repository.py  qdrant_repository.py
src/usecases/: chunk_documents.py  ingest_data.py  retrieve_data.py
