[project]
name = "sk-mas-aiworker-rag-biz"
version = "0.1.0"
description = "AI RAG System using Qdrant and OpenAI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "qdrant-client>=1.7.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.0.1",
    "langchain-text-splitters>=1.1.0",
    "fastmcp>=0.1.0",
    "python-multipart>=0.0.21",
]
